Added in the extra deliverables (after grading) for the third lab.

--- a/labs/lab3/cs440S2014-lab3.tex
+++ b/labs/lab3/cs440S2014-lab3.tex
@@ -117,8 +117,11 @@ This assignment invites you to submit printed and signed versions of the followi
   \begin{enumerate}
     \item A paragraph that explains how multi-threaded Java programs use {\tt synchronized} 
     \item A detailed discussion of the execution behavior of a multi-threaded Java program
+    \item The output from running the defective versions of the producer-consumer model
     \item A comprehensive analysis of the output of each defective multi-threaded Java program
+    \item The source code of all of the classes in the enhanced producer-consumer model 
     \item The report from an experimental study that characterizes the performance of the model 
+    \item A reflective discussion of the challenges you encountered during this assignment 
   \end{enumerate}
 
 Students are strongly encouraged to write their laboratory report in \LaTeX~and use tools such as the R language for statistical
@@ -130,7 +133,5 @@ students in this class to have high-level conversations about the assignment, it
 student who discusses the principles underlying a problem with others and the student who produces assignments that are identical
 to, or merely variations on, someone else's work.  As such, deliverables that are nearly identical to the work of others will be
 taken as evidence of violating the \mbox{Honor Code}.  
-
-
 
   \end{document}
