--- a/labs/lab4/cs440S2014-lab4.tex
+++ b/labs/lab4/cs440S2014-lab4.tex
@@ -12,7 +12,7 @@
 
 Processes and threads are commonly used by the operating system itself and by the programs that run on the operating
 system. In the previous laboratory assignment you learned how to implement and evaluate Java programs that use the {\tt
-  synchronized} keyword to create a multi-threaded produced consumer model. In this laboratory assignment, you will
+synchronized} keyword to create a multi-threaded produced consumer model. In this laboratory assignment, you will
 download, use, extend, and further investigate with a multi-threaded producer-consumer model that uses semaphores,  As
 in the previous assignment, you will add some features to the model that enable you to study it more effectively.
 Finally, you will systematically break various parts of the model in order to observe what can go wrong when
@@ -113,13 +113,17 @@ This assignment invites you to submit printed and signed versions of the followi
 
 \begin{enumerate}
 
-  \item A clear description of the term semaphore, with comments about the its historical origins 
+  \item A clear description of the term semaphore, with comments about its historical origins 
 
   \item A revised and extended implementation of the producer-consumer model
 
+  \item Output demonstrating the command-line arguments that you added to the {\tt ProducerConsumer}
+
+  \item The output from running the producer-consumer model in all defective configurations
+
   \item A comprehensive analysis of the output of each defective multi-threaded Java program
 
-  \item A reflection of the characteristics of the two different producer-consumer models
+  \item A reflection on the characteristics of the two different producer-consumer models
 
 \end{enumerate}
 
