--- a/labs/lab5/cs440S2014-lab5.tex
+++ b/labs/lab5/cs440S2014-lab5.tex
@@ -14,9 +14,9 @@
 
   Modern operating systems normally have a kernel that runs a scheduler.  The goal of the scheduler is to pick which
   process will next run on the central processing unit (CPU).  There are a wide variety of scheduling algorithms, such
-  as first-come first-served (FCSF), shortest job first (SJF), round-robin (RR), and priority scheduling.  Since the
-  behavior of these algorithms is \mbox{workload-driven} and they are often difficult to study an analytically,
-  operating systems designers may use simulators to better understand their trade-offs in efficiency and fairness. In
+  as first-come first-served (FCFS), shortest job first (SJF), round-robin (RR), and priority (PR) scheduling.  Since
+  the behavior of these algorithms is \mbox{workload-driven} and they are often difficult to study analytically,
+  operating systems designers may use simulators to better understand the trade-offs in efficiency and fairness. In
   this laboratory assignment, you will use a scheduling simulator, implemented by Jim Weller, to evaluate several
   scheduling algorithms.
 
@@ -39,33 +39,33 @@
   To run the simulator, you should type {\tt java -jar cpu.jar} in the terminal window.  What do you now see on your
   screen? To run a simulation, you must first load the {\tt jobList.dat} file.  Then, you should pick a scheduling
   algorithm, indicate the speed at which the algorithm should be animated, and check whether or not the algorithm should
-  consider prioritization and preemption. Now, you can click the check box to run the algorithm. (Please note that the
+  consider prioritization or preemption. Now, you can click the check box to run the algorithm. (Please note that the
   ``check box'' is really a toggle button that does not render correctly on Ubuntu. If you click this button and the
   simulator does not run as anticipated, then click it again and see if this starts the animation.)
 
-  Once you have finished a run of the simulator, you will observe that it reports a wide variety of evaluation
-  metrics. During this laboratory assignment, we will primarily focus on the mean values for response, turnaround, and
-  wait time. Ideally, a scheduler will run a workload of jobs in a manner that yields low values for all of these
-  metrics. Of course, it is also important to find a scheduler that executes processes in a manner that leads to
-  low standard deviations for these evaluation metrics. What were the metric values for the past run of the simulator?
+  Once you have finished a run of the simulator, you will observe that it reports a wide variety of evaluation metrics.
+  During this laboratory assignment, we will primarily focus on the mean values for response, turnaround, and wait time.
+  Ideally, a scheduler will run a workload of jobs in a manner that yields low values for all of these metrics. Of
+  course, it is also important to find a scheduler that executes processes in a manner that leads to low standard
+  deviations for these evaluation metrics. What were the metric values for one of the runs of the simulator?
 
   In this laboratory assignment, you will use the scheduler simulator to evaluate the effectiveness of the first-come
-  first-serve, shortest job first, round-robin, and priority scheduling algorithms.  In the first phase of your study,
+  first-served, shortest job first, round-robin, and priority scheduling algorithms.  In the first phase of your study,
   you should develop a better understanding of the algorithms and the simulator by using the {\tt jobList.dat} file
   provided in the version control repository. During all of your experiments, you should record the mean values for
-  response, turnaround, and wait time and note whether the standard deviations are high or low. You should also run
-  every algorithm with and without either preemption or prioritization. When you are done with this study, you should be
+  response, turnaround, and wait time and note whether the standard deviations are high or low. You also should run
+  every algorithm with and without either preemption or prioritization. When you are done with this study, you must be
   able to explain which scheduling algorithm is best suited to run this listing of three processes. 
 
-  After you have finished this preliminary study, you should create a job list that contains at least ten to twenty
+  After you have finished this preliminary study, you need to create a job list that contains at least ten to twenty
   process descriptions.  Then, you should repeat the study again, using all combinations of algorithm and scheduling 
-  preference.  Again, you should be able to determine which algorithm is the best and explain how you arrived at this
+  preference.  Again, you should aim to determine which algorithm is the best and explain how you arrived at this
   conclusion. Finally, you should use the random workload generator provided by the scheduler to study at least five
   additional job lists. Students who would like to speed up the simulation time are encouraged to try a higher value for
   the frames per second (FPS) setting. As in the previous experiments, you should try to draw a conclusion as to which
   algorithm is the best and be able to, whenever possible, explain why it is the best.
 
-  After you have finished running all of the simulations, you should prepare a comprehensive report of your findings.
+  After you have finished running all of the simulations, you must prepare a comprehensive report of your findings.
   Using tables of data and paragraphs of results analysis, the report must highlight and discuss all of your
   experimental results. In advance of talking about your findings, the report should clearly explain how each of the
   scheduling algorithms actually works. Also, the report should formally define the evaluation metrics and discuss the
