Changed the header for the sixth laboratory assignment.

--- a/labs/lab6/cs440S2014-lab6.tex
+++ b/labs/lab6/cs440S2014-lab6.tex
@@ -1,12 +1,12 @@
-%!TEX root=cs440S2014-lab5.tex 
-% mainfile: cs440S2014-lab5.tex 
+%!TEX root=cs440S2014-lab6.tex 
+% mainfile: cs440S2014-lab6.tex 
 
 \input{labspre.tex}
 
 \usepackage[compact]{titlesec}
 
-\begin{document} \MYTITLE{Laboratory Assignment Five: Using Simulation to Evaluate Scheduling Algorithms} 
-\MYHEADERS{Laboratory Assignment Five}{Due: March 10, 2014}
+\begin{document} \MYTITLE{Laboratory Assignment Six: Measuring the Size of Program Variables in Java and C}
+\MYHEADERS{Laboratory Assignment Six}{Due: March 31, 2014}
 
 % \vspace*{-.32in}
 
