Removed some of the deliverable requirements. Writing the analysis section.

--- a/labs/lab6/cs440S2014-lab6.tex
+++ b/labs/lab6/cs440S2014-lab6.tex
@@ -51,7 +51,10 @@
 
 \section*{Analysis of the Sizing Results}
 
-  
+  This laboratory assignment focuses on computing the size of primitive variables. How would the results vary if we
+  considered the sizing of pointers, dynamically allocated variables, and heap-resident objects? What do the results
+  from running your programs suggest about the trade-offs in the management of memory pages in the entire memory address
+  space?
 
 \section*{Summary of the Required Deliverables}
 
@@ -66,18 +69,6 @@ This assignment invites you to submit printed and signed versions of the followi
   \item All of the {\tt .dat} files used in the simulation studies that you conducted your experiments
 
   \item A comprehensive report on all of the runs of the scheduling simulator that includes:
-
-  \begin{enumerate}
-
-  \itemsep0in
-    \item A clear description the behavior of each of the scheduling algorithms
-    \item A commentary on how preemption and prioritization influences scheduling decisions
-    \item A formal definition of the evaluation metrics used in your study
-    \item A description of the job workloads used during the simulations
-    \item A detailed analysis of the results from running the scheduler simulations
-    \item A statement of which scheduling algorithm is best suited for a modern operating system
-
-  \end{enumerate}
 
   \item A reflective discussion of the challenges that you encountered when completing this assignment
 
