Finished making revisions to the sixth laboratory assignment.

--- a/labs/lab6/cs440S2014-lab6.tex
+++ b/labs/lab6/cs440S2014-lab6.tex
@@ -76,15 +76,15 @@ This assignment invites you to submit printed and signed versions of the followi
 
 \begin{enumerate}
 
-  \item The source code of the {\tt usesizeof.c} and {\tt UseSizeOf.java} programs
+  \item The properly commented source code of the {\tt usesizeof.c} and {\tt UseSizeOf.java} programs
 
   \item The command lines that you used to compile and run the C and Java programs
 
   \item A comprehensive report that explains the results and responds to all stated questions 
 
-  \item Suggestions for new features to add to the variable sizing programs
+  \item Suggestions for additional features to add to the variable sizing programs
 
-  \item Suggestions for future experiments and analyses that use the variable sizing programs
+  \item Ideas for future experiments and analyses that use the variable sizing programs
 
   \item A reflective discussion of the challenges that you encountered when completing this assignment
 
