Added the first two sections to the seventh laboratory assignment.

--- a/labs/lab7/cs440S2014-lab7.tex
+++ b/labs/lab7/cs440S2014-lab7.tex
@@ -21,7 +21,14 @@ ag} or the ``Silver Searcher'', is a new tool for file system searching. As part
 command lines associated with both of these tools and then design a benchmarking framework to determine which one is
 faster.  Finally, you will explore at least one advanced application of these tools.
 
-\section*{File System Searching with {\tt grep} and {\tt ag}}
+\section*{File System Searching with {\tt grep}, {\tt ag}, and {\tt nautilus}}
+
+Before you start using these two tools, you should learn about their history. For instance, you should learn exactly
+when the tools were implemented and who initially created them. Next, you should run the {\tt man} command in your
+terminal window and study the output to ensure that you understand the basic command lines that both tools support. What
+are the basic commands for searching a specific directory with these two tools? Finally, you should type {\tt nautilus}
+in your terminal window to run Ubuntu's graphical file system browser.  How does {\tt nautilus} support file
+system searching?  Which tool seems to furnish the most robust set of searching features?
 
 \section*{Experimentally Evaluating File System Searchers}
 
