Added the content about the experimental evaluation.

--- a/labs/lab7/cs440S2014-lab7.tex
+++ b/labs/lab7/cs440S2014-lab7.tex
@@ -32,6 +32,19 @@ system searching?  Which tool seems to furnish the most robust set of searching 
 
 \section*{Experimentally Evaluating File System Searchers}
 
+As you are implementing a large software system, like an operating system or a compiler, it is important for you to have
+the ability to quickly search through a large collection of files for those that contain a specified word or pattern.
+For this part of the laboratory assignment, you should find five separate directories of source code that contain a
+substantial number of files. Next, you should use a Linux command to determine how many files are in each of the chosen
+directories; please make sure that you clearly explain how you counted the total number of files.
+
+The next step in the experimental evaluation of {\tt grep} and {\tt ag} is to devise at least five different command
+lines that you can run for each of the tools. Then, for each of the five commands and the five different directories
+containing code, you should evaluate the efficiency and effectiveness of the tools. In particular, you should evaluate
+the searchers according to the following metrics: (i) the number of results produced, (ii) the usefulness and accuracy
+of the output, and (iii) the speed at which the tools produce their output. When conducting the experiments to evaluate
+efficiency, please run multiple trials and report arithmetic means and standard deviations. 
+
 \section*{Analysis of the Sizing Results}
 
 \section*{Advanced Use of File System Searchers}
