Started the analysis of the results section.

--- a/labs/lab7/cs440S2014-lab7.tex
+++ b/labs/lab7/cs440S2014-lab7.tex
@@ -48,7 +48,11 @@ this basic experiment, you should develop and run one additional study. For inst
 of file system searchers that are run in both your home account (e.g., {\tt /home/g/gkapfham/}) and on a local disk
 (e.g., the {\tt /tmp} directory on your workstation).
 
-\section*{Analysis of the Sizing Results}
+\section*{Analysis of the Searching Results}
+
+Now that you have defined your benchmarks and run your experiments, you should analyze the searching results. Beyond
+identifying which tool is faster and the circumstances in which it is better, you should also aim to explain, whenever
+it is possible to do so, why these results are evident.
 
 \section*{Advanced Use of File System Searchers}
 
