Added all of the content about the analysis of the searching results.

--- a/labs/lab7/cs440S2014-lab7.tex
+++ b/labs/lab7/cs440S2014-lab7.tex
@@ -52,9 +52,16 @@ of file system searchers that are run in both your home account (e.g., {\tt /hom
 
 Now that you have defined your benchmarks and run your experiments, you should analyze the searching results. Beyond
 identifying which tool is faster and the circumstances in which it is better, you should also aim to explain, whenever
-it is possible to do so, why these results are evident.
+it is possible to do so, why these results are evident. If you had to pick one of these tools for searching both large
+and small directories of source code, which one would you select? Why? As you complete a report on the results from your
+empirical study, make sure that you give all of the relevant details that would be needed to support the replication of
+your results. Finally, you should comment on whether or not it would be possible to perform the same type of file
+searching with {\tt nautilus}, Ubuntu's graphical file browser. Please see the instructor if you have questions about
+completing these analysis tasks.
 
 \section*{Advanced Use of File System Searchers}
+
+File system searching tools like
 
 \section*{Summary of the Required Deliverables}
 
